--- a/index.html
+++ b/index.html
@@ -502,12 +502,11 @@
             <div class="cta">
                 <h2>Ready to Transform Your Supply Chain?</h2>
                 <p>The technology is mature, the benefits are proven, and the competitive advantages are waiting to be claimed. Don't let your competitors get ahead—start your AI journey today.</p>
-                <button class="cta-button" onclick="alert('Contact your AI transformation team to get started!')">Get Started Now</button>
-            </div>
+               
 
             <div class="section" style="background: #f8f9fa; padding: 30px; border-radius: 15px; margin-top: 40px;">
                 <h2 style="border: none; padding: 0; color: #4b2e83;">💬 Share Your Thoughts</h2>
-                <p style="font-size: 1.1rem; margin-bottom: 20px;">How do you envision AI transforming your industry? Share your insights in Teams!</p>
+                <p style="font-size: 1.1rem; margin-bottom: 20px;">How do you envision AI transforming your industry? Share your insights!</p>
                 
                 <div style="background: white; padding: 25px; border-radius: 10px; border-left: 4px solid #b7a57a; margin-top: 20px;">
                     <h3 style="color: #4b2e83; margin-bottom: 15px;">Acknowledgment</h3>
